# python-hello

./: Dockerfile  main.py  pyproject.toml
python-hello/: Chart.yaml  values.yaml
python-hello/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
python-hello/templates/tests/: test-connection.yaml
